Fixes art display page layout issue

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -533,11 +533,6 @@ video {
   padding: 2rem;
 }
 
-.artDisplay {
-  display: flex;
-  align-items: start;
-}
-
 .navbar {
   height: 8rem;
   border-bottom-width: 2px;
@@ -595,6 +590,10 @@ video {
   height: 70px;
 }
 
+.settings, .settings > img{
+  height: 70px;
+}
+
 .backarrow, .backarrow > img{
   height: 30px;
 }
@@ -603,20 +602,12 @@ video {
   position: fixed;
 }
 
-.col-span-3 {
-  grid-column: span 3 / span 3;
-}
-
 .col-span-2 {
   grid-column: span 2 / span 2;
 }
 
 .col-start-3 {
   grid-column-start: 3;
-}
-
-.col-start-2 {
-  grid-column-start: 2;
 }
 
 .m-8 {
@@ -707,6 +698,18 @@ video {
   min-width: fit-content;
 }
 
+.flex-none {
+  flex: none;
+}
+
+.flex-shrink-0 {
+  flex-shrink: 0;
+}
+
+.flex-grow {
+  flex-grow: 1;
+}
+
 .border-collapse {
   border-collapse: collapse;
 }
@@ -715,32 +718,16 @@ video {
   cursor: pointer;
 }
 
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
 .grid-cols-6 {
   grid-template-columns: repeat(6, minmax(0, 1fr));
-}
-
-.place-items-center {
-  place-items: center;
-}
-
-.justify-center {
-  justify-content: center;
-}
-
-.justify-self-start {
-  justify-self: start;
-}
-
-.justify-self-end {
-  justify-self: end;
-}
-
-.place-self-center {
-  place-self: center;
 }
 
 .whitespace-pre-wrap {
@@ -772,6 +759,11 @@ video {
   padding: 0.5rem;
 }
 
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .py-10 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
@@ -782,11 +774,6 @@ video {
 }
 
 .pr-8 {
-  padding-right: 8rem;
-}
-
-.px-8 {
-  padding-left: 2rem;
   padding-right: 2rem;
 }
 
@@ -827,18 +814,6 @@ video {
 
 .outline {
   outline-style: solid;
-}
-
-.basis-1\/3 {
-  flex-basis:33.333333%;
-}
-
-.basis-2\/3 {
-  flex-basis:66.666667%;
-}
-
-.basis-half {
-  flex-basis:50%;
 }
 
 /* Global settings */
@@ -904,6 +879,11 @@ input::-moz-placeholder {
 
 input::placeholder {
   font-weight: 300;
+}
+
+.artDisplay {
+  display: flex;
+  align-items: start;
 }
 
 /* Button styles */
